test/units/ParseSpec/valid/expr/abs-wildcard.algst
\(_:Bool) [_:TU] (_:Int) -> 0
