test/units/ParseSpec/invalid/expr/abs-no-term-lin.algst
\[x:TU] [y:TU] -o 0
